# pytorch-recsys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.claude/: CLAUDE.md  settings.local.json
.claude/prds/: pytorch-recsys-framework.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: index.rst
pytorch_recsys/: __init__.py  cli.py
pytorch_recsys/configs/: __init__.py
pytorch_recsys/data/: __init__.py
pytorch_recsys/evaluation/: __init__.py
pytorch_recsys/layers/: __init__.py
pytorch_recsys/models/: __init__.py  base.py  mock.py  registry.py
pytorch_recsys/serving/: __init__.py
pytorch_recsys/training/: __init__.py
pytorch_recsys/utils/: __init__.py
tests/: __init__.py  test_cli.py  test_models_base.py  test_models_registry.py  test_package.py
